# fastapi_graphql

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app_types/: __init__.py  user.py
controllers/: user.py
database/: db.py
models/: user.py
