[tool.poetry]
name = "fastapi-graphql"
version = "0.1.0"
description = ""
authors = ["Diego Pardo"]
readme = "README.md"
packages = [{include = "fastapi_graphql"}]

[tool.poetry.dependencies]
python = "^3.11"
strawberry-graphql = {extras = ["fastapi"], version = "^0.195.2"}
pymongo = "^4.4.1"
fastapi = "^0.100.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
